# budget-api

./: .env  .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  sqlx-data.json
.github/workflows/: check.yml  publish_docker_image.yml  publish_image.yml  test.yml
migrations/: 20221217130443_initial.down.sql  20221217130443_initial.up.sql
scripts/: sqlx_setup.sql  start_db.sh
src/: app_state.rs  auth.rs  budget.rs  health_check.rs  lib.rs  main.rs  utils.rs
src/auth/: config.rs  jwk.rs  utils.rs
src/budget/: dto.rs  item_repository.rs  model.rs  repository.rs
src/budget/fixtures/: budget_multiple.sql  budget_with_items.sql
tests/common/: mod.rs
